# crewai_amp_demo

./: README.md  crew.py  pyproject.toml  requirements.txt
config/: agents.yaml  tasks.yaml
src/: main.py
src/config/: crew.py
